# healthcare-knowledge-navigator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  ENGINE_MANIFEST.sha256  FEATURES.md  GLOSSARY.md  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/commands/: code-review.md  commit.md
.github/workflows/: ci.yml
app/: cache.py  cleaning.py  config.py  device.py  feedback.py  ingest.py  main.py  observability.py  ocr.py  prompts.py  providers.py  rag.py  rerank.py  retrieval.py  schemas.py  security.py  trace.py
data/: asthma_management.md  hypertension_guideline.md  metformin_drug_info.md  synth_htn_trial_abstract.md
docs/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG-STRATEGY.md  DEFINITION-OF-DONE.md  DEPLOYMENT.md  DOC-CATALOG.md  FRONTEND.md  HOW-RAG-WORKS.md  INGESTION.md  README.md  RUNBOOK.md  SECURITY-AUDIT.md  SECURITY.md  TEST-STRATEGY.md
docs/adr/: 0001-provider-abstraction.md  0002-citations-from-retrieval-metadata.md
docs/specs/: F01-ingestion.md  F02-retrieval.md  F03-citations.md  F04-providers.md  F05-api.md  F06-streaming.md  F07-caching.md  (+16 more)
eval/: qa_dataset.jsonl  run_eval.py
scripts/: fetch_corpus.py  generate_synthetic_data.py  install-ocr.sh  setup.ps1  setup.sh  sync_engine.py
tests/: conftest.py  test_api.py  test_chunking.py  test_citations.py  test_corpus.py  test_features.py  test_p3.py  test_parity.py  test_providers.py
web/: .env.example  README.md  package.json
(+14 files in other folders)
